--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "dotenv": "^4.0.0",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "https": "^1.0.0",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.10.1",
     "morgan": "~1.8.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
+    "request": "^2.81.0",
     "serve-favicon": "~2.4.2"
   }
 }
