twitter api authentication and search working serverside

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 MONGODB_URI=mongodb://localhost:27017/contenthub
 SECRET=contenthub1337
 YOUTUBE_KEY=AIzaSyA9KowL_DYOpKWLOX-inA-qj8aFYE58fYA
+CONSUMER_KEY=ZIU3l3xHnlfSFFeg1tJWaKXEg
+CONSUMER_SECRET=QcAUyamFOGBibzsCkBXKhrN9NpXHH5EaxfURp7ghMnQPBhJmAv
+ACCESS_TOKEN=804728163645394944-9NkgefWe4tqQX7OUeqZVn0zMFbULBid
+ACCESS_TOKEN_SECRET=lkL96m0pzxUd0wCEXHKC8nmDS4zxGu2LCCcUbg0a3jrhn
+CALLBACK_URL=
