--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.10.1",
     "morgan": "~1.8.1",
+    "oauth": "^0.9.15",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "request": "^2.81.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "twitter-node-client": "0.0.6"
   }
 }
