added tumblr searchù

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ CONSUMER_SECRET=QcAUyamFOGBibzsCkBXKhrN9NpXHH5EaxfURp7ghMnQPBhJmAv
 ACCESS_TOKEN=804728163645394944-9NkgefWe4tqQX7OUeqZVn0zMFbULBid
 ACCESS_TOKEN_SECRET=lkL96m0pzxUd0wCEXHKC8nmDS4zxGu2LCCcUbg0a3jrhn
 CALLBACK_URL=
+TUMBLR_KEY=ocwrdGdvulBU7qoGjhOA1QwNnNQXhdSXKWGuKNgVKF9oqrVmi7
+TUMBLR_SECRET=wDyReUB65BYUWg9lQGOAMPcOvF8PYL1HQTemdi5yqsTEkVqtS8
